added akatsuki api
